GitHub Oauth added and working
